# evol

./: CMakeLists.txt  candle.hpp  evol_cpp.cpp  main.cpp  setup.py
deal_tracker/: deal_tracker.cpp  deal_tracker.hpp
limit_strategy/: states.cpp  states.hpp  strategy.cpp  strategy.hpp
market_strategy/: states.cpp  states.hpp  strategy.cpp  strategy.hpp
strategy/: states.cpp  states.hpp  strategy.cpp  strategy.hpp
utils/: candle.hpp  optional.hpp
